--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,3 +41,12 @@ workflows:
             parameters:
               go-version:
                 - '1.7'
+                - '1.8'
+                - '1.9'
+                - '1.10'
+                - '1.11'
+                - '1.12'
+                - '1.13'
+                - '1.14'
+                - '1.15'
+                - latest
